image overflow fixed

--- a/src/styles/review.css
+++ b/src/styles/review.css
@@ -153,7 +153,7 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     line-height: 1.3;
 }
 .coupon-name .discount-tag{
