--- a/src/styles/store.css
+++ b/src/styles/store.css
@@ -231,11 +231,6 @@ body{
     font-size: .95rem;
     font-weight: 500;
     margin: .4rem 0px;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    min-height: 3.1rem;
   }
   @media(max-width:450px){
     .coupon-box .content a h3{
@@ -448,7 +443,7 @@ body{
     font-size: 1.7rem;
     margin-bottom: 1rem;
 }
-.related-store .row{
+.related-store .store-box{
     margin-bottom: 1rem;
 }
 .store-item {
